src/test/ui/issues/issue-3680.stderr
error[E0308]: mismatched types
  --> $DIR/issue-3680.rs:3:9
   |
LL |     match None {
   |           ---- this match expression has type `std::option::Option<_>`
LL |         Err(_) => ()
   |         ^^^^^^ expected enum `std::option::Option`, found enum `std::result::Result`
   |
   = note: expected type `std::option::Option<_>`
              found type `std::result::Result<_, _>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
